--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>化热公式</title>
+    <link rel="stylesheet" href="./bootstrap.min.css">
 </head>
+
 <body>
-    <h1>化热公式gh-pages测试</h1>
+    <div class="card">
+        <div class="card-header">
+            化热公式
+        </div>
+        <div class="card-body">
+            <div class="btn-group mr-2" role="group" aria-label="First group">
+                <button id="rk-btn" type="button" class="btn btn-primary">R-K方程</button>
+                <button id="srk-btn" type="button" class="btn btn-primary">SRK方程</button>
+            </div>
+
+            <div id="formDiv">
+                
+            </div>
+
+        </div>
+        <div class="card-footer text-muted">
+            给小谢
+        </div>
+    </div>
+
+    <script src="./jquery-3.5.1.min.js"></script>
+    <script src="./bootstrap.bundle.min.js"></script>
+    <script src="./bootstrap.min.js"></script>
+    <script src="./func.js"></script>
 </body>
+
 </html>
