--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>化热公式</title>
     <link rel="stylesheet" href="./bootstrap.min.css">
+    <style>
+        .noDisplay {
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
@@ -19,9 +24,36 @@
                 <button id="srk-btn" type="button" class="btn btn-primary">SRK方程</button>
             </div>
 
-            <div id="formDiv">
-                
-            </div>
+            <form id="form">
+                <div class="form-group">
+                    <label for="T">输入T：</label>
+                    <input step="0.01" type="number" class="form-control" id="T" aria-describedby="emailHelp" required>
+                </div>
+                <div class="form-group">
+                    <label for="p">输入p：</label>
+                    <input step="0.01" type="number" class="form-control" id="p" required>
+                </div>
+                <div class="form-group">
+                    <label for="Tc">输入Tc：</label>
+                    <input step="0.01" type="number" class="form-control" id="Tc" required>
+                </div>
+                <div class="form-group">
+                    <label for="Pc">输入Pc：</label>
+                    <input step="0.01" type="number" class="form-control" id="Pc" required>
+                </div>
+
+                <div class="form-group" id="wDiv">
+                    <label for="Pc">输入w：</label>
+                    <input step="0.01" type="number" class="form-control" id="w">
+                </div>
+
+                <div class="form-group">
+                    <label for="count">输入迭代次数</label>
+                    <input type="number" class="form-control" id="count" required>
+                </div>
+                <div class="form-group" id="wDiv"></div>
+                <button type="submit" id="submit_btn" class="btn btn-primary">计算</button>
+            </form>
 
         </div>
         <div class="card-footer text-muted">
